src/objects/APTS_AgreementVolumeObligation__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Agreement_Total_Volume_Obligation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Total Volume Obligation</label>
        <referenceTo>APTS_AgreementTotalVolumeObligation__c</referenceTo>
        <relationshipName>Agreement_Volume_Obligations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>Agreement_Volume_Obligations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Malus__c</fullName>
        <formula>APTS_Volume_Obligation_Remainder__c *  APTS_Malus_per_Unit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Malus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Malus_per_Unit__c</fullName>
        <label>Malus per Unit</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Next_email_notification__c</fullName>
        <description>An email notification about volume obligations is sent every 4 months</description>
        <label>Next email notification</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Order_In_Progress_Quantity__c</fullName>
        <label>Order In Progress Quantity</label>
        <summarizedField>APTS_Agreement_Volume_Obligation_Line__c.APTS_Order_In_Progress_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>APTS_Agreement_Volume_Obligation_Line__c.APTS_Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>APTS_Agreement_Volume_Obligation_Line__c.APTS_Agreement_Volume_Obligation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Progress__c</fullName>
        <formula>IF(APTS_Volume_Obligation__c &gt;0 , &apos;0 &apos; &amp; IF(APTS_Ordered_Quantity__c &gt;0 , IMAGE(&apos;/resource/1491229715000/ProgressBarDark&apos;, &apos;Test&apos;, 10, ( APTS_Ordered_Quantity__c / APTS_Volume_Obligation__c * 200 )) &amp; TEXT (APTS_Ordered_Quantity__c), &apos;&apos;) 
&amp; IF(APTS_Order_In_Progress_Quantity__c &gt;0 , IMAGE(&apos;/resource/1491229737000/ProgressBarMedium&apos;, &apos;Test&apos;, 10, ( APTS_Order_In_Progress_Quantity__c / APTS_Volume_Obligation__c * 200 )) &amp; IF(APTS_Order_In_Progress_Quantity__c &lt; APTS_Volume_Obligation__c, TEXT (APTS_Order_In_Progress_Quantity__c),&apos;&apos; ), &apos;&apos;) &amp; 
IMAGE(&apos;/resource/1491229757000/ProgressBarLight&apos;, &apos;Test&apos;, 10, ((APTS_Volume_Obligation__c - APTS_Ordered_Quantity__c - APTS_Order_In_Progress_Quantity__c ) / APTS_Volume_Obligation__c * 200 )) &amp; 
&apos; &apos; &amp; 
TEXT (ROUND(APTS_Volume_Obligation__c, 0)) &amp;&apos; &apos;&amp;  TEXT(APTS_Unit_of_Measure__c) , &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ordered_Quantity__c</fullName>
        <label>Ordered Quantity</label>
        <summarizedField>APTS_Agreement_Volume_Obligation_Line__c.APTS_Ordered_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>APTS_Agreement_Volume_Obligation_Line__c.APTS_Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>APTS_Agreement_Volume_Obligation_Line__c.APTS_Agreement_Volume_Obligation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Status__c</fullName>
        <description>Shows whether tracking is closed or open for the schedule records.</description>
        <inlineHelpText>Shows whether tracking is closed or open for the schedule records.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>SubCategory</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>SubSubCategory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>APTS_Unit_of_Measure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Value_Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Value__c</fullName>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Volume_Obligation_Met__c</fullName>
        <formula>APTS_Volume_Obligation_Remainder__c &lt;= 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Obligation Met</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Volume_Obligation_Remainder__c</fullName>
        <formula>APTS_Volume_Obligation__c -(APTS_Ordered_Quantity__c + APTS_Order_In_Progress_Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Obligation Remainder</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Volume_Obligation__c</fullName>
        <label>Volume Obligation Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Volume Assumption Obligation Schedule</label>
    <nameField>
        <displayFormat>AO-{00000000}</displayFormat>
        <label>Agreement Volume Obligation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume Assumption Obligation Schedule</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>